<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_yes_no_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialog_yes_no_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/dialog_yes_no_cancel"
        android:layout_below="@+id/dialog_yes_no_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/dialog_yes_no_yes"
        android:background="@null"
        android:minWidth="60dp"
        android:textSize="14sp"
        android:textColor="@drawable/button_text"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/dialog_yes_no_yes"
        android:layout_below="@+id/dialog_yes_no_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="60dp"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:textSize="14sp"
        android:textColor="@drawable/button_text"
        android:text="@string/yes" />
</RelativeLayout>
