<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mbs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/mbs_user_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white">

        <View
            android:id="@+id/mbs_user_grey_block"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/colorPrimary" />

        <View
            android:layout_below="@+id/mbs_user_grey_block"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mbs_user_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="25dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user_placeholder_black"
                android:scaleType="centerCrop"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/grey_dark" />

            <TextView
                android:id="@+id/mbs_user_full_name_label"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginEnd="10dp"
                android:gravity="bottom"
                android:layout_toEndOf="@+id/mbs_user_picture"
                android:paddingBottom="6dp"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/textColorPrimaryInverse"
                android:text="@string/hi" />

            <TextView
                android:id="@+id/mbs_user_full_name"
                android:layout_below="@+id/mbs_user_full_name_label"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:layout_toEndOf="@+id/mbs_user_picture"
                android:paddingTop="2dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:text="@string/app_name" />
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@+id/mbs_user_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mbs_user_gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/mbs_user_gender"
                android:layout_below="@+id/mbs_user_gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/textColorSecondary"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/mbs_user_register_date_label"
                android:layout_below="@+id/mbs_user_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:text="@string/registered_since" />

            <TextView
                android:id="@+id/mbs_user_register_date"
                android:layout_below="@+id/mbs_user_register_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/textColorSecondary"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/mbs_user_email_label"
                android:layout_below="@+id/mbs_user_register_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:text="@string/email" />

            <TextView
                android:id="@+id/mbs_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mbs_user_email_label"
                android:textSize="12sp"
                android:textColor="@color/textColorSecondary"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/mbs_user_street_label"
                android:layout_below="@+id/mbs_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:text="@string/address" />

            <TextView
                android:id="@+id/mbs_user_location_street"
                android:layout_below="@+id/mbs_user_street_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/textColorSecondary"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/mbs_user_location_city_state"
                android:layout_below="@+id/mbs_user_location_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/textColorSecondary"
                android:text="@string/app_name" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>